model - url - view+def - template study again

--- a/myapp_01/templates/myapp_01/index.html
+++ b/myapp_01/templates/myapp_01/index.html
@@ -13,9 +13,10 @@
     <p>title : {{sample.title}}</p>
     <p>id : {{sample.pk}}</p>
     <p>description : {{sample.description}}</p>
-    <p>uploadfile : {{sample.upload_file.url}}</p>
+    <p>uploadfile : <a href="{{sample.upload_file.url}}/">첨부 파일</a></p>
 
     <p>created date : {{sample.created}}</p>
+    <p>updated date : {{sample.updated}}</p>
     <p>author : {{sample.author}}</p>
 </h3>
 
